prod/discord/deployment.yml
kind: Namespace
apiVersion: v1
metadata:
  name: discord
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  namespace: discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
  template:
    metadata:
      labels:
        app: discord-bot
        delete-me: "true"
    spec:
      containers:
      - name: discord-bot
        image: index.docker.io/brbik/music_bot:1-debian
        imagePullPolicy: Always
        resources:
          requests:
            memory: "128Mi"
      - name: liveness
        image: nginx:1.25.1-alpine
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: discord-bot
  namespace: discord
spec:
  selector:
    app: discord-bot
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-nutter
  namespace: discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-nutter
  template:
    metadata:
      labels:
        app: discord-nutter
    spec:
      containers:
      - name: discord-bot
        image: index.docker.io/brbik/nutter-bot
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
