prod/discord/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-ingress
  namespace: discord
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: discord.kunde100.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: discord-bot
            port:
              number: 8080
